--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 100px;
 }
 
 /* .header {
